    been done to simplify users code and to solve the lack of thread safety 
    that was causing problems with the MemoryManager.
    
    Support added for reading and writing of callbacks in the .osg format.
    
    Support added for reading OpenFlight comment records into osg::Node description
    fields.
    
    Improvements to the GEO loaders.


13th November 2002 - OpenSceneGraph-0.9.2.tar.gz

    >>> New AC3D and GEO loaders, new Shape primitives, improved OpenFlight support.

    From Geoff Michel, AC3D .wc and Carbon Graphics GEO .geo loaders.

    Support for multi-texturing added to OpenFlight loader.
    
    LOD has been revamped to allow independent min and max ranges for
    each LOD child, bringing it inline with the OpenFlight style LOD
    representation.

    Switch has been revamped to allow independent switching on or off of
    each Switch child, bringing it inline with the OpenFlight style Switch
    representation.

    New osg::Shape geometry primitives added which allow the specification
    of geometry in a form that can accelerate collision detection, and as
    a way of specifying the geometry to tessellate.  Shapes include 
    Sphere, Oriented Box, Cone, Cylinder, Grid, TriangleMesh, ConvexHull
    and CompositeShape which allows the storage of a hierarchy of shapes. 
    
    Geometry has been extended to all per primitive bindings and
    per primitive set bindings of attributes, and indexing of attributes
    with the same or different index lists for each attribute list.

    From Macro Jez, new cubemap helper classes.

    Support added for handling different extensions on different graphics
    contexts.

    Draw and Sort callbacks added to osg::RenderStage.

    Added PolygonStipple class.
    
    Further refinement of class names and method calls:
    Renamed classes : 
    
        Primitive    -> PrimitiveSet
        
    Renamed methods :
    
        Geometry::addPrimitive(..) -> addPrimitiveSet(..)