@@ -33,6 +33,8 @@ OSG News (most significant items from ChangeLog)
     fields.
     
     Improvements to the GEO loaders.
+    
+    Support for encoded text types in osgText.
 
 
 13th November 2002 - OpenSceneGraph-0.9.2.tar.gz
